--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,6 +7,6 @@
         <p align="center"><strong>Hardware and Software Engineer</strong></p>
         <hr>
         <h2><i>Resumen</i></h2>
-        <p>Este es mi resumen</p>
+        <p>Este "s" mi resumen</p>
     </body>
 </html>
