--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <h1 align="center">Angel Soto Boullosa</h1>
         <p align="center"><strong>Hardware and Software Engineer</strong></p>
         <hr>
-        <h2><i>Resumen</i></h2>
+        <h2><i>Resum!</i></h2>
         <p>Este "s" mi resumen</p>
     </body>
 </html>
