--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     </head>
     <body>
         <h1 align="center">Angel Soto Boullosa</h1>
-        <p align="center"><strong>Hardware and Software Engineer</strong></p>
+        <p align="center"><strong>Hardware (HW) and Software (SW) Engineer</strong></p>
         <hr>
-        <h2><i>Resum!</i></h2>
-        <p>Este "s" mi resumen</p>
+        <h2><i>Resumen</i></h2>
+        <p>Este es mi resumen</p>
     </body>
 </html>
