--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <h1 align="center">Angel Soto Boullosa</h1>
         <p align="center"><strong>Hardware (HW) and Software (SW) Engineer</strong></p>
         <hr>
-        <h2><i>Resumen</i></h2>
+        <h2 align="center"><i>Resumen</i></h2>
         <p>Este es mi resumen</p>
     </body>
 </html>
