--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <p align="center"><strong>Hardware (HW) and Software (SW) Engineer</strong></p>
         <hr>
         <h2 align="center"><i>Resumen</i></h2>
-        <p>Este es mi resumen</p>
+        <p>_Este es mi resumen_</p>
     </body>
 </html>
