--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <hr>
         <h2 align="center"><i>Resumen</i></h2>
         <p>Este_es mi resumen</p>
+        <h2> Soy muy trabajador </h2>
     </body>
 </html>
