--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
         <h1 align="center">Angel Soto Boullosa</h1>
         <p align="center"><strong>Hardware (HW) and Software (SW) Engineer</strong></p>
         <hr>
-        <h2 align="center"><i>Resumen</i></h2>
-        <p>Este_es mi resumen <a href="pages/Curriculum.html">link</a></p>
-        <embed src="files/CV.pdf" type="application/pdf" width="100%" height="600px" />
-        <h2> Soy muy trabajador </h2>
+        <h2 align="center"><i>Página principal</i></h2>
+        <p>Esta es mi propia página web. <br>
+            Está realizada con código HTML y css. <br>
+            Se aloja en el servidor de Pages de Github. <br>
+            
+            En este <a href="pages/Curriculum.html">link</a> tendrá acceso a mi curriculum completo</p>
     </body>
 </html>
