--- a/pages/Curriculum.html
+++ b/pages/Curriculum.html
@@ -7,7 +7,7 @@
         <p align="center"><strong>Hardware (HW) and Software (SW) Engineer</strong></p>
         <hr>
         <h2 align="center"><i>Resumen</i></h2>
-        <p>Este_es mi resumen <a href="curriculum">link</a></p>
-        <h2> Soy muy trabajador </h2>
+        <p>Este es mi Curriculum</p>
+        <embed src="../files/CV.pdf" type="application/pdf" width="100%" height="600px" />
     </body>
 </html>
