--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <html>
+    <header>
+        <link href="styles/style.css" rel="stylesheet" type="text/css">
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="pages/Curriculum.html">Curriculum</a></li>
+            </ul>
+        </nav>
+    </header>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <head>
-        <title>Angel Soto Boullosa</title>
+        <title align="center">Angel Soto Boullosa</title>
     </head>
+
     <body>
         <h1 align="center">Angel Soto Boullosa</h1>
         <p align="center"><strong>Hardware (HW) and Software (SW) Engineer</strong></p>
