--- a/pages/Curriculum.html
+++ b/pages/Curriculum.html
@@ -1,4 +1,19 @@
 <html>
+    <header>
+        <link href="../styles/style.css" rel="stylesheet" type="text/css">
+        <nav>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="Curriculum.html">Curriculum</a></li>
+
+            </ul>
+        </nav>
+    </header>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <head>
         <title>Angel Soto Boullosa</title>
     </head>
